Add cousre chapter section

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -63,8 +63,12 @@ img {
     border-color: #fff;
 }
 
-/* Topics Section Header */
+.section {
+    margin: 4rem 0;
+}
 
+
+/* Topics Section Header */
 .section-header {
     max-width: 750px;
     margin: 0 auto;
