Complete chapter cards styling

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -92,6 +92,18 @@ img {
     margin: 0 auto 2rem;
 };
 
+ /* Card  */
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 2rem 1.75rem;
+    background: #fff;
+    box-shadow: 0 rpx 12px 0 rgba(0, 0, 0, 0.3);
+}
+
 
 /* Navbar */
 .navbar {
@@ -258,7 +270,7 @@ this class on this element.
 /* Chapter Cards */
 .chapter-cards {
     display: grid;
-    grid-template-columns: repeat(3 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
     padding: 1rem 0 4rem;
 }
@@ -266,6 +278,12 @@ this class on this element.
 .chapter-cards img {
     width: 130px;
     margin-top: 1rem;
+}
+
+.chapter-cards h3 {
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin: 1rem 0;;
 }
 
 /* ======================== */
@@ -308,6 +326,10 @@ this class on this element.
 
     .topics {
         grid-template-columns: repeat(2,1fr);
+    }
+
+    .chapter-cards {
+        grid-template-columns: 1fr;
     }
 }
 
