Add Course Summary section lists

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -286,6 +286,39 @@ this class on this element.
     margin: 1rem 0;;
 }
 
+/* =============== */
+/* **** Summary ****/
+/* =============== */
+.summary {
+    background: var(--light-color);
+    color: var(--dark-color);
+    padding: 4rem 2rem 5rem;
+}
+
+.summary .section-lists {
+    background: #fff;
+    padding: 2rem;
+}
+
+.summary .list-header {
+    background: var(--primary-color);
+    color: #fff;
+    padding: 0.5rem 1rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin: 1rem 0;
+}
+
+.summary .list-item {
+    padding: 1.4 rem 0;
+    border-bottom: 1px solid #f1f4f6;
+}
+
+.summary .list-item:last-child{
+    border-bottom: none;
+}
+
+
 /* ======================== */
 /* ***** Media Query ****** */
 /* ======================== */
@@ -362,5 +395,9 @@ this class on this element.
 
     .topics {
         grid-template-columns: 1fr;
+    }
+
+    .summary .container {
+        padding: 0;
     }
 }
