Add Info section

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -318,6 +318,12 @@ this class on this element.
     border-bottom: none;
 }
 
+/* Info Section */
+.info-container {
+    
+}
+
+
 
 /* ======================== */
 /* ***** Media Query ****** */
