--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -320,10 +320,41 @@ this class on this element.
 
 /* Info Section */
 .info-container {
-    
+    background: url('../images/audience.jpg') top center/cover no-repeat;
+    display: flex;
 }
 
+.info-content {
+    background-color: var(--primary-color);
+    color: #fff;
+    flex: 1;
+    padding: 4rem;
+}
 
+.info-content h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+.info-content p {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+}
+
+.info-content ul li {
+    font-size: 1.2rem;
+    line-height: 2;
+}
+
+.info-content i {
+    margin-right: 0.5rem;
+    color: var(--secondary-color);
+}
+
+.info-left {
+    width: 50%;
+}
 
 /* ======================== */
 /* ***** Media Query ****** */
@@ -382,6 +413,22 @@ this class on this element.
     .navbar .mobile-menu-toggle {
         display: block;
         padding: 10px;
+    }
+
+    .info-container{
+        flex-direction: column;
+    }
+
+    .info-content h2 {
+        font-size: 1.5rem;
+    }
+
+    .info-content p {
+        font-size: 1rem;
+    }
+
+    .info-left {
+        display: none;
     }
 }
 
