--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -67,15 +67,69 @@ img {
     font-weight: 600;
 }
 
-.navbar__menu-link:hover {
+.navbar__menu-link:hover, .navbar__mobile-menu-link:hover {
     color: var(--primary-color);
 }
 
 /* BEM (block, elements, and modifiers */
 /* --primary modifier */
-.navbar__menu-link--primary {
-    color: var(--primary-color)
+.navbar__menu-link--primary,
+.navbar__mobile-menu-link--primary {
+    color: var(--primary-color);
 }
-.navbar__menu-link--primary:hover {
+.navbar__menu-link--primary:hover,
+.navbar__mobile-menu-link--primary:hover  {
     color: #fff;
+}
+
+/* Mobile Menu */
+.navbar__mobile-menu {
+    /* We want to hide everything mobile by default */
+    display: none;
+    cursor: pointer;
+}
+
+.navbar__mobile-menu-items {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: var(--secondary-color);
+    opacity: 0.95;
+    padding: 3rem 2rem;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.navbar__mobile-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    font-size: 1.2rem;
+}
+
+/* So now we're gonna move the mobile menu off screen
+to the right. So we're gonna use transfrom translate X */
+
+
+.navbar__mobile-menu-items {
+    transform: translateX(100%);
+}
+
+/* NOTE: We want JS to active the active class to the HTML dynamically */
+.navbar__mobile-menu-items.active {
+    transform: translateX(0);
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .navbar__menu {
+        display: none;
+    }
+
+    .navbar__mobile-menu {
+        display: block;
+    }
 }
