--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -36,6 +36,12 @@ img {
     max-width: 100%;
 }
 
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+
 /* Navbar */
 .navbar {
     padding: 1rem 2rem;
@@ -48,8 +54,6 @@ img {
     transition: background-color 0.3s ease-in-out;
 }
 .navbar__container {
-    max-width: 1100px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
