--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -41,6 +41,21 @@ img {
     margin: 0 auto;
 }
 
+.btn {
+    padding: 0.5rem 2rem;
+    background-color: var(--primary-color);
+    border: 2px solid transparent;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 50px;
+    transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+    background-color: var(--secondary-color);
+    border-color: var(--primary-color);
+}
+
 
 /* Navbar */
 .navbar {
@@ -53,6 +68,12 @@ img {
     background-color: transparent;
     transition: background-color 0.3s ease-in-out;
 }
+
+.navbar.navbar--scroll {
+    background-color: rgba(38, 36, 49, 0.8);
+    backdrop-filter: blur(10px);
+}
+
 .navbar__container {
     display: flex;
     justify-content: space-between;
@@ -147,11 +168,70 @@ to the right. So we're gonna use transfrom translate X */
 .hero__title {
     font-size: 3.5rem;
     line-height: 1.2;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.hero__title--primary {
+    color: var(--primary-color);
+}
+
+.hero__description {
+    margin-top: 1.5rem;
+    fornt-size: 1.2rem;
+    line-height: 1.6;
+}
+
+.hero__image img {
+    max-width: 500px;
+}
+
+.hero__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+
+.hero__button {
+    padding: 1rem 2rem;
+}
+
+.hero__button i {
+    margin-right: 0.5rem;
 }
 
 
-
 /* Media Queries */
+@media (max-width: 992px) {
+    .hero {
+        padding: 10rem;
+        text-align: center;
+    }
+
+    .hero__container {
+        flex-direction: column;
+    }
+
+    .hero__title {
+        font-size: 2.3rem;
+    }
+
+    .hero__buttons {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .hero__button {
+        width: 100%;
+    }
+
+    .hero__image img {
+        max-width: 350px;
+    }
+}
+
 @media (max-width: 768px) {
     .navbar__menu {
         display: none;
