--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -202,6 +202,38 @@ to the right. So we're gonna use transfrom translate X */
     margin-right: 0.5rem;
 }
 
+/* Testimonials */
+.testimonials {
+    padding: 4rem 2rem;
+    text-align: center;
+}
+
+.testimonials__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonials__card {
+    padding: 0 3rem;
+}
+
+.testimonials__image img {
+    width: 96px;
+    height: 96px;
+    border-radius: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 1.5rem;
+}
+
+.testimonials__card-text {
+    font-style: italic;
+    margin-bottom: 1.5rem;
+}
+
 
 /* Media Queries */
 @media (max-width: 992px) {
@@ -230,6 +262,18 @@ to the right. So we're gonna use transfrom translate X */
     .hero__image img {
         max-width: 350px;
     }
+
+    .testimonials__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .testimonials__card {
+        padding: 0 1.5rem; /* zero top/bottom 1.5 left*/
+    }
+
+    .testimonials__card:nth-child(3) {
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
@@ -239,5 +283,13 @@ to the right. So we're gonna use transfrom translate X */
 
     .navbar__mobile-menu {
         display: block;
+    }
+
+    .testimonials__container {
+        grid-template-columns: 1fr;
+    }
+
+    .testimonials__card:nth-child(2) {
+        display: none;
     }
 }
