--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -234,9 +234,72 @@ to the right. So we're gonna use transfrom translate X */
     margin-bottom: 1.5rem;
 }
 
+/* Features */
+.features {
+    background-color: var(--tertiary-color);
+    padding: 6rem 2rem;
+}
+
+.features__container {
+    text-align: center;
+}
+
+.features__title {
+    font-size: 2.3rem;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+}
+
+.features__description {
+    max-width: 600px;
+    margin: 1rem auto 4rem;
+}
+
+.features__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.features__grid-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6rem;
+}
+
+.features__grid-item {
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    text-align: right;
+    gap: 1.5rem;
+}
+
+.features__grid-item-text-title {
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.features__grid-item-icon {
+    margin-top: 2rem;
+}
+
+.features__grid-item-icon i {
+    color: var(--primary-color);
+}
+
+.features__grid-column-right .features__grid-item {
+    flex-direction: row-reverse;
+    text-align: left;
+}
+
 
 /* Media Queries */
 @media (max-width: 992px) {
+    /* Hero */
     .hero {
         padding: 10rem;
         text-align: center;
@@ -263,6 +326,8 @@ to the right. So we're gonna use transfrom translate X */
         max-width: 350px;
     }
 
+    /* Testimonials */
+
     .testimonials__container {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -274,9 +339,40 @@ to the right. So we're gonna use transfrom translate X */
     .testimonials__card:nth-child(3) {
         display: none;
     }
+
+    /* Features */
+    .features__grid {
+        grid-template-columns: 1fr;
+    }
+
+    .features__grid-column-left, .features__grid-column-right {
+        order: 2;
+        margin-bottom: 2rem;
+    }
+
+    .features__grid-column-center {
+        order: 1;
+        margin-bottom: 3rem;
+    }
+
+    .features__grid-item, .features__grid-column-right .features__grid-item {
+        text-align: center;
+        flex-direction: column-reverse;
+        max-width: 400px;
+    }
+
+    .features__grid-item-icon {
+        margin: 0 auto;
+    }
+
+    .features__grid-column-center img {
+        max-width: 300px;
+    }
+
 }
 
 @media (max-width: 768px) {
+    /* Navbar */
     .navbar__menu {
         display: none;
     }
@@ -284,6 +380,8 @@ to the right. So we're gonna use transfrom translate X */
     .navbar__mobile-menu {
         display: block;
     }
+
+    /* Testimonials */
 
     .testimonials__container {
         grid-template-columns: 1fr;
