--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -296,6 +296,39 @@ to the right. So we're gonna use transfrom translate X */
     text-align: left;
 }
 
+/* Preview */
+.preview {
+    background: url('../images/video-background.jpg') center center/cover no-repeat;
+}
+
+.preview__container {
+    padding: 6rem 2rem;
+    text-align: center;
+}
+
+.preview__title {
+    font-size: 2.3rem;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+}
+
+.preview_description {
+    max-width: 600px;
+    margin: 1rem auto 4rem;
+}
+
+.preview__video-wrapper {
+    position: relative;
+}
+
+.preview__video-wrapper img {
+    width: 100%;
+    max-width: 900px;
+    border-radius: 10px;
+}
+
+/* Play Button Container */
+
 
 /* Media Queries */
 @media (max-width: 992px) {
