Add video preview section design play button

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -328,7 +328,20 @@ to the right. So we're gonna use transfrom translate X */
 }
 
 /* Play Button Container */
-
+.preview__video-play-button {
+    /* position: absolute;
+    top: 48%;
+    left: 50%; */
+    transform: translateX(-50%) translateY(-50%);
+    /* z-index: 10;
+    display: block;
+    box-sizing: content-box;
+    width: 2rem;
+    height: 2.75rem;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 1.25rem 1.25rem 1.25rem 1.75rem; */ */
+}
 
 /* Media Queries */
 @media (max-width: 992px) {
