Add Modal video JS responsiveness

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -401,6 +401,38 @@ to the right. So we're gonna use transfrom translate X */
     }
 }
 
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal__content {
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    border-radius: 10px;
+    max-width: 600px;
+    position: relative;
+}
+
+.modal__close-button {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 40;
+    cursor: pointer;
+}
+
+
 /* Media Queries */
 @media (max-width: 992px) {
     /* Hero */
@@ -493,5 +525,16 @@ to the right. So we're gonna use transfrom translate X */
 
     .testimonials__card:nth-child(2) {
         display: none;
+    }
+
+    /* Video Modal */
+    .modal__content {
+        margin: 40% auto;
+        padding: 10px;
+        width: 90;
+    }
+
+    .modal__content iframe {
+        width: 100%;
     }
 }
