--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -432,6 +432,51 @@ to the right. So we're gonna use transfrom translate X */
     cursor: pointer;
 }
 
+/* Details */
+.details {
+    padding: 9rem 2rem;
+}
+
+.details__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.details__grid-heading {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+
+}
+
+.details__grid-description {
+    line-height: 1.6;
+    margin-bottom: 2rem;
+}
+
+
+/* Details Icons */
+.details__icons {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 8rem;
+    gap: 2rem;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.details__icons i {
+    color: var(--primary-color);
+    margin-bottom: 1rem;
+}
+
+.details__icons-amount {
+    font-size: 3.5rem;
+    font-weight: 600;
+}
+
 
 /* Media Queries */
 @media (max-width: 992px) {
@@ -439,6 +484,7 @@ to the right. So we're gonna use transfrom translate X */
     .hero {
         padding: 10rem;
         text-align: center;
+        line-height: 1.2;
     }
 
     .hero__container {
@@ -505,6 +551,28 @@ to the right. So we're gonna use transfrom translate X */
         max-width: 300px;
     }
 
+    /* Details */
+    .details__grid {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .details__grid-image img {
+        width: 100%;
+        max-width: 400px;
+    }
+
+    .details__grid-content {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    .details__icons {
+        flex-direction: column;
+        gap: 2rem;
+        margin-top: 4rem;
+    }
 }
 
 @media (max-width: 768px) {
