--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -477,6 +477,40 @@ to the right. So we're gonna use transfrom translate X */
     font-weight: 600;
 }
 
+/* Screenshots */
+.screenshots {
+    padding: 6rem 2rem;
+    background: var(--tertiary-color);
+    text-align: center;
+}
+
+.screenshots__container {
+    max-width: 1200px;
+}
+
+.screenshots__title {
+    font-size: 2.3rem;
+    text-transform: uppercase;
+    border-bottom: 2px solid var(--primary-color);
+    width: 300px;
+    margin: 0 auto 2.5rem;
+}
+
+.screenshots__images {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.screenshots__images img {
+    width: 100;
+    max-width: 200px;
+    margin: 0 auto;
+}
+
+
+
 
 /* Media Queries */
 @media (max-width: 992px) {
