Add download section style

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -509,6 +509,51 @@ to the right. So we're gonna use transfrom translate X */
     margin: 0 auto;
 }
 
+/* Download */
+
+.download {
+    background: #000 url('../images/download-background.jpg') center center/cover no-repeat;
+    padding: 11.5rem 2rem 8rem;
+}
+
+.download__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+}
+
+.download__content {
+    max-width: 500px;
+}
+
+.download__description {
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    line-height: 1.6;
+    text-align: center;
+}
+
+.download__image img {
+    width: 100%;
+    max-width: 500px;
+}
+
+.download__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+
+.download__button {
+    padding: 1rem 2rem;
+}
+
+.download__button i {
+    margin-right: 0.5rem;
+}
 
 
 
@@ -606,6 +651,25 @@ to the right. So we're gonna use transfrom translate X */
         flex-direction: column;
         gap: 2rem;
         margin-top: 4rem;
+    }
+
+    /* Download */
+    .download {
+        padding-top: 10rem;
+        text-align: center;
+    }
+
+    .download__container {
+        flex-direction: column-reverse;
+    }
+
+    .download__buttons {
+        flex-direction: column;
+    }
+
+    .download__button {
+        width: 100%;
+        /* padding: 0.7rem; */
     }
 }
 
