--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/CSS/style.css
@@ -659,6 +659,40 @@ to the right. So we're gonna use transfrom translate X */
     text-align: center;
 }
 
+/* Details Features */
+.details-features {
+    background: var(--tertiary-color);
+    padding: 4rem rem;
+}
+
+.details-features__title {
+    font-size: 2.3rem;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.details-features__list-item {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    margin-bottom: 3.5rem;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 20px;
+    padding: 1.5rem;
+}
+
+.details-features__list-item i {
+    color: var(--primary-color);
+}
+
+.details-features__list-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+
 /* Media Queries */
 @media (max-width: 992px) {
     /* Hero */
@@ -825,6 +859,12 @@ to the right. So we're gonna use transfrom translate X */
 
     .pricing__card {
         margin-bottom: 4.5rem;
+    }
+
+    /* Details Features */
+    .details-features__list-item {
+        flex-direction: column;
+        text-align: center;
     }
 
 }
